Fix Timestamp assertion test for metrics query